- version: unreleased
- Finished quiz edit form using read logic(@Chino96)
- Changed course/quiz/homework forms also updated corresponding models(@Chino96)
- added a basic profile page, added User authenticated link displays to base.html(@Chino96)
- started courses app added courses to admin page(@Chino96)
- Got CSS working(@as12660)
- Added Professor model to admin page(@Chino96)
- Changed Student and Professor Add and Change forms(@Chino96)
- Added course list to profile page(@Chino96)
- Changed course creation form and course model(@Chino96)
- Created base Course Page Template(@Chino96)
- Added read in file logic to courses/forms.py (@kh06089)
- Added navigation bar to the home page (@cm09516)
- Added navigation bar to the course page (@kh06089/@as12660)
- Updated auto sizing of page elements for Login and Home (@as12660)
- Added more CSS (including animation) to home/login/profile/course page (@as12660)
- Added dropdown menu to Assignments tab in navigation on course page along with other small CSS changes (@as12660)
- Added date and weather to home page (@as12660)
- Added profile info and changed slight CSS (@as12660)
- Created student quiz page(@kh06089)