@@ -18,3 +18,4 @@
 - Added date and weather to home page (@as12660)
 - Added profile info and changed slight CSS (@as12660)
 - Created student quiz page(@kh06089)
+- Deletion of questions on quiz edit page done
